--- a/myproject/package.json
+++ b/myproject/package.json
@@ -13,7 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "autoprefixer": "^10.4.20",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "pinia": "^2.2.4",
+    "postcss": "^8.4.47",
+    "postcss-pxtorem": "^5.1.1",
+    "style-loader": "^4.0.0",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
