--- a/myproject/package.json
+++ b/myproject/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "pinia": "^2.2.4",
     "postcss": "^8.4.47",
     "postcss-pxtorem": "^5.1.1",
     "style-loader": "^4.0.0",
+    "vant": "^4.9.8",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
