--- a/myproject/package.json
+++ b/myproject/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.2.4",
     "postcss": "^8.4.47",
     "postcss-pxtorem": "^5.1.1",
+    "qweather-icons": "^1.6.0",
     "style-loader": "^4.0.0",
     "vant": "^4.9.8",
     "vue": "^3.5.11",
