--- a/management/package.json
+++ b/management/package.json
@@ -13,7 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "pinia": "^2.2.4",
+    "style-loader": "^4.0.0",
+    "vant": "^4.9.8",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
