--- a/serve/package.json
+++ b/serve/package.json
@@ -15,7 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "node-cmd": "^5.0.0",
     "nodemailer": "^6.9.15",
+    "os-utils": "0.0.14",
     "svg-captcha": "^1.4.0"
   }
 }
