fix:修复一点问题

--- a/serve/package.json
+++ b/serve/package.json
@@ -24,6 +24,7 @@
     "openai": "^4.67.3",
     "os-utils": "0.0.14",
     "svg-captcha": "^1.4.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^8.18.0"
   }
 }
